[tool.poetry]
name = "dpo"
version = "0.1.0"
description = "dpo dataset on huggingface"
authors = ["Shun-Fu Hu"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
